subprojects {
    apply plugin: 'java'

    java.toolchain.languageVersion = JavaLanguageVersion.of(25)
    java.withSourcesJar()
    java.withJavadocJar()

    jar {
        from(rootProject.file("LICENSE"))
        from(rootProject.file("README.md"))
        manifest {
            attributes([
                    'Specification-Title'     : mod_name,
                    'Specification-Vendor'    : mod_author,
                    'Specification-Version'   : project.jar.archiveVersion,
                    'Implementation-Title'    : project.name,
                    'Implementation-Version'  : project.jar.archiveVersion,
                    'Implementation-Vendor'   : mod_author,
                    'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                    'Timestampe'              : System.currentTimeMillis(),
                    'Built-On-Java'           : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
                    'Build-On-Minecraft'      : minecraft_version
            ])
        }
    }

    sourcesJar {
        from(rootProject.file("LICENSE"))
        from(rootProject.file("README.md"))
    }

    repositories {
        mavenCentral()

        maven {
            name = 'NeoForged'
            url = 'https://maven.neoforged.net/releases'
        }

        maven {
            name = 'Sponge / Mixin'
            url = 'https://repo.spongepowered.org/repository/maven-public/'
        
            content {
                excludeGroupByRegex "net\\.minecraft.*"
                excludeGroupByRegex "net\\.fabricmc.*"
                excludeGroupByRegex "net\\.neoforged.*"
            }
       }

        maven {
            name = 'BlameJared Maven (CrT / Bookshelf)'
            url = 'https://maven.blamejared.com'
        
            content {
                excludeGroupByRegex "net\\.minecraft.*"
                excludeGroupByRegex "net\\.fabricmc.*"
                excludeGroupByRegex "net\\.neoforged.*"
            }
       }

        maven {
            name = "ModMaven"
            url = "https://modmaven.dev"
        
            content {
                excludeGroupByRegex "net\\.minecraft.*"
                excludeGroupByRegex "net\\.fabricmc.*"
                excludeGroupByRegex "net\\.neoforged.*"
            }
       }

        maven {
            name = "AssortedMods"
            url = "https://maven.grimoid.com/mods"
        
            content {
                excludeGroupByRegex "net\\.minecraft.*"
                excludeGroupByRegex "net\\.fabricmc.*"
                excludeGroupByRegex "net\\.neoforged.*"
            }
       }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.release = 25
        // The 26.2 port produces far more than javac's default 100-error cap.
        it.options.compilerArgs << '-Xmaxerrs' << '10000'
    }

    // Javadoc on Minecraft-derived sources trips doclint constantly; keep the jar, drop the pedantry.
    tasks.withType(Javadoc).configureEach {
        options.addStringOption('Xdoclint:none', '-quiet')
        failOnError = false
    }

    // Disables Gradle's custom module metadata from being published to maven. The
    // metadata includes mapped dependencies which are not reasonably consumable by
    // other mod developers.
    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }
}
